src/objects/Call_Log__c.object
<CustomObject>
    <fields>
        <fullName>CLog_Stage_Status__c</fullName>
        <formula>Stage__c &amp;&quot;-&quot;&amp; Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CLog Stage&amp;Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Date_Time__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Call_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsCall__c</fullName>
        <formula>IF( Status__c == &apos;Call Attempt 1&apos; || Status__c == &apos;Call Attempt 2&apos; || Status__c == &apos;Call Attempt 3&apos; || Status__c == &apos;Call Complete&apos;, true, false)


/** Old version 
IF( Status__c == &apos;Call Attempt 1&apos; || Status__c == &apos;Call Attempt 2&apos; || Status__c == &apos;Call Attempt 3&apos; || Status__c == &apos;Call Complete&apos; || Status__c == &apos;Remedial Action Required&apos;, true, false)

**/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCall</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSurvey__c</fullName>
        <formula>IF(Status__c = &apos;Call Complete&apos;,true,false)

/** Old version
IF(Status__c = &apos;Call Complete&apos; || Status__c == &apos;Remedial Action Required&apos;,true,false)
**/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsSurvey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Status__c</fullName>
        <formula>IF  
(Stage__c =&quot;Check In&quot; 
  &amp;&amp;  
    (
         Status__c =&quot;Email Complete&quot; 
         || Status__c =&quot;Email Sent&quot;
     ),&quot;Check In Emails&quot;,
   
  IF 
    (Stage__c = &quot;Customer Care Call&quot; 
      &amp;&amp; 
       (
           Status__c =&quot;Call Attempt 1&quot; 
        || Status__c =&quot;Call Attempt 2&quot; 
        || Status__c =&quot;Call Attempt 3&quot;
        || Status__c =&quot;Call Complete&quot;
        || Status__c =&quot;Remedial Action Complete&quot;
       ), &quot;Customer Care Calls&quot;,
    

     IF 
       (Stage__c = &quot;Check In&quot; 
        &amp;&amp; 
         (
           Status__c =&quot;Call Attempt 1&quot; 
           || Status__c =&quot;Call Attempt 2&quot; 
           || Status__c =&quot;Call Attempt 3&quot;
           || Status__c =&quot;Call Complete&quot;
           || Status__c =&quot;Remedial Action Complete&quot;
         ), &quot;Check In Calls&quot;, &quot;Not Applicable&quot;
    
      ) 
   )

)</formula>
        <label>Main Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Stage__c</fullName>
        <label>Old Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Status__c</fullName>
        <label>Old Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contact Log</label>
    <nameField>
        <displayFormat>CL{0000000000}</displayFormat>
        <label>Contact Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>